2003-04-10  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* docs/langspecs.txt :
	* example/chinese_wall :
	* example/document_release :
	* example/geography :
	* example/read_write :
	* example/recursive :
	* example/sample :
	* example/separation :
	* example/subset :
	* parser/parser.y :
	* parser/scanner.l :

	  - Removed unnecessary "trans" keyword from language to be compatible
	    with vlad.

	  - Changed "is" statement to "query".

	* docs/bnf.txt :
	* docs/langspecs.txt :
	* example/read_write :
	* example/sample :
	* exp/comp_atom.c :
	* exp/comp_atom.h :
	* exp/comp_exp.c :
	* exp/expression.h :
	* exp/gnd_atom.c :
	* exp/gnd_atom.h :
	* exp/gnd_exp.c :
	* parser/parser.y :
	* parser/scanner.l :

	  - Now constants true and false are no longer part of the language.

2003-03-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :

	  - Fixed bug where a non-group identifier does not inherit
	    the properties of its supergroup if the properties themselves
	    are non-groups. See chinese-wall example.

2002-12-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :
	* docs/bnf.txt :

	  - Fixed bug that prevented the use of transformations that
	    do not have any parameters.

2002-10-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :

	  - Added a more helpful message when a transformation fails
	    due to the addition of an atom whose negation is already
	    implied by other atoms in the expression.

	* exp/gnd_exp.c :

	  - Now the eval function will check elements of groups when
	    proving subset atoms. G1 is a subset of G2 if all elements
	    of G1 is also an element of G2. Conversely, if at least
	    one element of G1 is NOT in G2, then G1 is NOT a subset
	    of G2.

	  - Fixed the bug that causes the eval function to think that
	    explicitly defined atoms are automatically logical consequences
	    of the other atoms. Now the eval_atom function only looks