@@ -1,3 +1,9 @@
+2005-02-21  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
+
+	* datastruct/simplelist.c :
+
+	  - Fixed del_data() do properly erase a node.
+
 2003-04-10  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* docs/bnf.txt :
